@@ -1,0 +1,8 @@
+module Gecode  
+  # A module containing constraints that have enumerations of boolean variables 
+  # as left hand side.
+  module Constraints::BoolEnum
+  end
+end
+
+require 'gecoder/interface/constraints/bool_enum/boolean'
